--- a/templates/app_shop/product_detail.html
+++ b/templates/app_shop/product_detail.html
@@ -27,8 +27,8 @@
                             <p>{{ object.detail_text|linebreaks }}</p>
                         </dd>
                     </dl>
-                    <a href="" class="btn btn-lg btn-outline-primary text-uppercase"><i
-                            class="fas fa-shopping-cart"></i>Add to
+                    <a href="{% url 'app_order:add' pk=object.pk %}"
+                        class="btn btn-lg btn-outline-primary text-uppercase"><i class="fas fa-shopping-cart"></i>Add to
                         Cart</a>
                 </article>
             </aside>
