--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
                             class="fas fa-user-tie"></i> {{request.user.profile.username}}</a>
                     <div class="dropdown-menu" aria-labelledby="nabbarDropdown">
                         <a class="dropdown-item" href="{% url 'app_login:profile' %}">Profile</a>
-                        <a class="dropdown-item">Order</a>
+                        <a class="dropdown-item" href="{% url 'app_payment:orders' %}">Orders</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'app_login:logout' %}">Logout</a>
                     </div>
