--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load cart_tag %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'app_shop:home' %}">Pinz Basic</a>
+        <a class="navbar-brand" href="{% url 'app_shop:home' %}">Ecommerce Basic</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span>
